# decisionengine

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
examples/1/: ruleset.json  ruleset_1.json
examples/1/inputs/accept/: input_accept_1.json
examples/1/inputs/reject/: input_reject_1.json  input_reject_2.json
examples/2/: ruleset.json  ruleset_2.json
examples/2/inputs/accept/: input_accept_1.json
examples/2/inputs/reject/: input_reject_1.json  input_reject_2.json
examples/3/: ruleset.json
inputs/accept/: input_accept_1.json
inputs/reject/: input_reject_1.json
migrations/2018-08-17-133016_initial/: down.sql  up.sql
src/: main.rs  schema.rs
src/decisionengine/: deserializers.rs  mod.rs  modules.rs  nodes.rs  operations.rs  results.rs  rules.rs  schema.rs  visitor.rs
src/decisionengine/datasource/: applicationdata.rs  experian.rs  mod.rs
src/decisionengine/datasource/mocks/: decisiondatafetcher.rs  mod.rs
terraform/: .env.example  .gitignore  ecs-cluster.tf  ecs-worker.tf  load-balancer.tf  network.tf  rds.tf  terraform.tf  tfplan  variables.tf
terraform/backends/: development.tfvars
terraform/environments/: development.tfvars
